# XC64

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: workflows.yml
.github/workflows/: build-xc64.yml  cmake-multi-platform.yml
src/: exe-linker.cpp  library-loader.cpp  main.cpp  sysinfo.cpp
src/lib/: lib-linker.hpp  library-loader.cpp  library-loader.hpp
